Quadrat: Another fix for alignments

--- a/quadrat/assets/theme.css
+++ b/quadrat/assets/theme.css
@@ -659,6 +659,18 @@ textarea:focus {
 	outline: 1px dotted currentColor;
 }
 
+.alignfull p {
+	padding-left: var(--wp--custom--margin--horizontal);
+	padding-right: var(--wp--custom--margin--horizontal);
+}
+
+@media (max-width: 704px) {
+	[class^="wp-container-"] p {
+		padding-left: var(--wp--custom--margin--horizontal);
+		padding-right: var(--wp--custom--margin--horizontal);
+	}
+}
+
 .site-header {
 	position: relative;
 }
